# WorldOfWordcraft

./: .gitignore  CMakeLists.txt  README.md  cmakecompile.sh
src/: WordModel.cc  WordModel.hh  atomsAndMolecules.hh  crafter.hh  main.cc  utf8.cc  utf8.hh
